--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,6 +98,11 @@
             android:exported="true">
 
         </activity>
+
+        <activity android:name=".TopAppBarActivity"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
