--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,6 +103,11 @@
             android:exported="true">
 
         </activity>
+
+        <activity android:name=".ProgressIndicatorActivity"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
